{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 34,
  "lineage": "8d78c0ed-7571-3f49-fdfb-8e439d247bc2",
  "resources": [
    {
      "module": "module.lb_nic_association",
      "mode": "data",
      "type": "azurerm_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "lb_nic1",
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/loadBalancers/test-lb-1/frontendIPConfigurations/PublicFrontEnd",
                "name": "PublicFrontEnd",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/publicIPAddresses/test-pip-3"
              }
            ],
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/loadBalancers/test-lb-1",
            "location": "eastus",
            "name": "test-lb-1",
            "resource_group_name": "test-rg-1",
            "sku": "Standard"
          }
        },
        {
          "index_key": "lb_nic2",
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/loadBalancers/test-lb-1/frontendIPConfigurations/PublicFrontEnd",
                "name": "PublicFrontEnd",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/publicIPAddresses/test-pip-3"
              }
            ],
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/loadBalancers/test-lb-1",
            "location": "eastus",
            "name": "test-lb-1",
            "resource_group_name": "test-rg-1",
            "sku": "Standard"
          }
        }
      ]
    },
    {
      "module": "module.lb_nic_association",
      "mode": "data",
      "type": "azurerm_lb_backend_address_pool",
      "name": "lb_be_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.lb_nic_association",
      "mode": "data",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "lb_nic1",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/networkInterfaces/test-nic-1",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/publicIPAddresses/test-pip-1",
                "subnet_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/virtualNetworks/test-vnet-1/subnets/test-subnet-1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "test-nic-1",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "test-rg-1",
            "tags": {
              "environment": "test",
              "owner": "devops"
            }
          }
        },
        {
          "index_key": "lb_nic2",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/networkInterfaces/test-nic-2",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/publicIPAddresses/test-pip-2",
                "subnet_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/virtualNetworks/test-vnet-1/subnets/test-subnet-1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "test-nic-2",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "test-rg-1",
            "tags": {
              "environment": "test",
              "owner": "devops"
            }
          }
        }
      ]
    },
    {
      "module": "module.lb_pool_probe",
      "mode": "data",
      "type": "azurerm_lb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "probe1",
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/loadBalancers/test-lb-1/frontendIPConfigurations/PublicFrontEnd",
                "name": "PublicFrontEnd",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/publicIPAddresses/test-pip-3"
              }
            ],
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/loadBalancers/test-lb-1",
            "location": "eastus",
            "name": "test-lb-1",
            "resource_group_name": "test-rg-1",
            "sku": "Standard"
          }
        }
      ]
    },
    {
      "module": "module.lb_pool_probe",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "bepool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "probe1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/loadBalancers/test-lb-1/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/loadBalancers/test-lb-1",
            "name": "BackEndAddressPool"
          },
          "dependencies": [
            "module.lb_pool_probe.data.azurerm_lb.load_balancer",
            "module.load_balancer.azurerm_lb.lb",
            "module.load_balancer.data.azurerm_public_ip.pip_lb",
            "module.public_ip.azurerm_public_ip.pip-block",
            "module.resource_group.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.sub_network",
            "module.virtual_network.azurerm_virtual_network.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.lb_pool_probe",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "http_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "probe1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/loadBalancers/test-lb-1/probes/http-probe",
            "interval_in_seconds": 5,
            "loadbalancer_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/loadBalancers/test-lb-1",
            "name": "http-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/"
          },
          "dependencies": [
            "module.lb_pool_probe.data.azurerm_lb.load_balancer",
            "module.load_balancer.azurerm_lb.lb",
            "module.load_balancer.data.azurerm_public_ip.pip_lb",
            "module.public_ip.azurerm_public_ip.pip-block",
            "module.resource_group.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.sub_network",
            "module.virtual_network.azurerm_virtual_network.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.lb_pool_probe",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "probe1",
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/loadBalancers/test-lb-1/backendAddressPools/BackEndAddressPool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/loadBalancers/test-lb-1/frontendIPConfigurations/PublicFrontEnd",
            "frontend_ip_configuration_name": "PublicFrontEnd",
            "frontend_port": 80,
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/loadBalancers/test-lb-1/loadBalancingRules/http-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/loadBalancers/test-lb-1",
            "name": "http-rule",
            "probe_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/loadBalancers/test-lb-1/probes/http-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "module.lb_pool_probe.azurerm_lb_backend_address_pool.bepool",
            "module.lb_pool_probe.azurerm_lb_probe.http_probe",
            "module.lb_pool_probe.data.azurerm_lb.load_balancer",
            "module.load_balancer.azurerm_lb.lb",
            "module.load_balancer.data.azurerm_public_ip.pip_lb",
            "module.public_ip.azurerm_public_ip.pip-block",
            "module.resource_group.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.sub_network",
            "module.virtual_network.azurerm_virtual_network.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.linux_vm",
      "mode": "data",
      "type": "azurerm_network_interface",
      "name": "nic_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm1",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/networkInterfaces/test-nic-1",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/publicIPAddresses/test-pip-1",
                "subnet_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/virtualNetworks/test-vnet-1/subnets/test-subnet-1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "test-nic-1",
            "network_security_group_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/networkSecurityGroups/test-nsg-1",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "test-rg-1",
            "tags": {
              "environment": "test",
              "owner": "devops"
            }
          }
        },
        {
          "index_key": "vm2",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/networkInterfaces/test-nic-2",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/publicIPAddresses/test-pip-2",
                "subnet_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/virtualNetworks/test-vnet-1/subnets/test-subnet-1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "test-nic-2",
            "network_security_group_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/networkSecurityGroups/test-nsg-1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "test-rg-1",
            "tags": {
              "environment": "test",
              "owner": "devops"
            }
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "pip_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "lb1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/publicIPAddresses/test-pip-3",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.178.38.232",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "test-pip-3",
            "resource_group_name": "test-rg-1",
            "sku": "Standard",
            "tags": {
              "environment": "test",
              "owner": "devops"
            }
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "lb1",
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/loadBalancers/test-lb-1/frontendIPConfigurations/PublicFrontEnd",
                "name": "PublicFrontEnd",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/publicIPAddresses/test-pip-3"
              }
            ],
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/loadBalancers/test-lb-1",
            "location": "eastus",
            "name": "test-lb-1",
            "resource_group_name": "test-rg-1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.load_balancer.data.azurerm_public_ip.pip_lb",
            "module.public_ip.azurerm_public_ip.pip-block",
            "module.resource_group.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.sub_network",
            "module.virtual_network.azurerm_virtual_network.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.network_interface",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "pip_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nic1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/publicIPAddresses/test-pip-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "74.235.245.45",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "test-pip-1",
            "resource_group_name": "test-rg-1",
            "sku": "Standard",
            "tags": {
              "environment": "test",
              "owner": "devops"
            }
          }
        },
        {
          "index_key": "nic2",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/publicIPAddresses/test-pip-2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.121.189.187",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "test-pip-2",
            "resource_group_name": "test-rg-1",
            "sku": "Standard",
            "tags": {
              "environment": "test",
              "owner": "devops"
            }
          }
        }
      ]
    },
    {
      "module": "module.network_interface",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnet_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nic1",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/virtualNetworks/test-vnet-1/subnets/test-subnet-1",
            "name": "test-subnet-1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "test-rg-1",
            "virtual_network_name": "test-vnet-1"
          }
        },
        {
          "index_key": "nic2",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/virtualNetworks/test-vnet-1/subnets/test-subnet-1",
            "name": "test-subnet-1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "test-rg-1",
            "virtual_network_name": "test-vnet-1"
          }
        }
      ]
    },
    {
      "module": "module.network_interface",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nic1",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/networkInterfaces/test-nic-1",
            "internal_domain_name_suffix": "gzvegudmr3zujjtdiprxv0wwnf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/publicIPAddresses/test-pip-1",
                "subnet_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/virtualNetworks/test-vnet-1/subnets/test-subnet-1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "test-nic-1",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "test-rg-1",
            "tags": {
              "environment": "test",
              "owner": "devops"
            }
          },
          "dependencies": [
            "module.network_interface.data.azurerm_public_ip.pip_data",
            "module.network_interface.data.azurerm_subnet.subnet_data",
            "module.public_ip.azurerm_public_ip.pip-block",
            "module.resource_group.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.sub_network",
            "module.virtual_network.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "nic2",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/networkInterfaces/test-nic-2",
            "internal_domain_name_suffix": "gzvegudmr3zujjtdiprxv0wwnf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/publicIPAddresses/test-pip-2",
                "subnet_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/virtualNetworks/test-vnet-1/subnets/test-subnet-1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "test-nic-2",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "test-rg-1",
            "tags": {
              "environment": "test",
              "owner": "devops"
            }
          },
          "dependencies": [
            "module.network_interface.data.azurerm_public_ip.pip_data",
            "module.network_interface.data.azurerm_subnet.subnet_data",
            "module.public_ip.azurerm_public_ip.pip-block",
            "module.resource_group.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.sub_network",
            "module.virtual_network.azurerm_virtual_network.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nsg1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/networkSecurityGroups/test-nsg-1",
            "location": "eastus",
            "name": "test-nsg-1",
            "resource_group_name": "test-rg-1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "test",
              "owner": "devops"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_group.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_nic_association",
      "mode": "data",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nsg_nic1",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/networkInterfaces/test-nic-1",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/publicIPAddresses/test-pip-1",
                "subnet_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/virtualNetworks/test-vnet-1/subnets/test-subnet-1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "test-nic-1",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "test-rg-1",
            "tags": {
              "environment": "test",
              "owner": "devops"
            }
          }
        },
        {
          "index_key": "nsg_nic2",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/networkInterfaces/test-nic-2",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/publicIPAddresses/test-pip-2",
                "subnet_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/virtualNetworks/test-vnet-1/subnets/test-subnet-1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "test-nic-2",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "test-rg-1",
            "tags": {
              "environment": "test",
              "owner": "devops"
            }
          }
        }
      ]
    },
    {
      "module": "module.nsg_nic_association",
      "mode": "data",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nsg_nic1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/networkSecurityGroups/test-nsg-1",
            "location": "eastus",
            "name": "test-nsg-1",
            "resource_group_name": "test-rg-1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "test",
              "owner": "devops"
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "nsg_nic2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/networkSecurityGroups/test-nsg-1",
            "location": "eastus",
            "name": "test-nsg-1",
            "resource_group_name": "test-rg-1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "test",
              "owner": "devops"
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.nsg_nic_association",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_nic_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nsg_nic1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/networkInterfaces/test-nic-1|/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/networkSecurityGroups/test-nsg-1",
            "network_interface_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/networkInterfaces/test-nic-1",
            "network_security_group_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/networkSecurityGroups/test-nsg-1"
          },
          "dependencies": [
            "module.network_interface.azurerm_network_interface.nic",
            "module.network_interface.data.azurerm_public_ip.pip_data",
            "module.network_interface.data.azurerm_subnet.subnet_data",
            "module.nsg.azurerm_network_security_group.nsg",
            "module.nsg_nic_association.data.azurerm_network_interface.nic",
            "module.nsg_nic_association.data.azurerm_network_security_group.nsg",
            "module.public_ip.azurerm_public_ip.pip-block",
            "module.resource_group.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.sub_network",
            "module.virtual_network.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "nsg_nic2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/networkInterfaces/test-nic-2|/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/networkSecurityGroups/test-nsg-1",
            "network_interface_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/networkInterfaces/test-nic-2",
            "network_security_group_id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/networkSecurityGroups/test-nsg-1"
          },
          "dependencies": [
            "module.network_interface.azurerm_network_interface.nic",
            "module.network_interface.data.azurerm_public_ip.pip_data",
            "module.network_interface.data.azurerm_subnet.subnet_data",
            "module.nsg.azurerm_network_security_group.nsg",
            "module.nsg_nic_association.data.azurerm_network_interface.nic",
            "module.nsg_nic_association.data.azurerm_network_security_group.nsg",
            "module.public_ip.azurerm_public_ip.pip-block",
            "module.resource_group.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.sub_network",
            "module.virtual_network.azurerm_virtual_network.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.public_ip",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip-block",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "pip1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/publicIPAddresses/test-pip-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "74.235.245.45",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "test-pip-1",
            "resource_group_name": "test-rg-1",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "test",
              "owner": "devops"
            }
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.sub_network",
            "module.virtual_network.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "pip2",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/publicIPAddresses/test-pip-2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.121.189.187",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "test-pip-2",
            "resource_group_name": "test-rg-1",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "test",
              "owner": "devops"
            }
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.sub_network",
            "module.virtual_network.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "pip3",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/publicIPAddresses/test-pip-3",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.178.38.232",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "test-pip-3",
            "resource_group_name": "test-rg-1",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "test",
              "owner": "devops"
            }
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.sub_network",
            "module.virtual_network.azurerm_virtual_network.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/virtualNetworks/test-vnet-1/subnets/test-subnet-1",
            "name": "test-subnet-1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "test-rg-1",
            "virtual_network_name": "test-vnet-1"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.resource_group",
            "module.virtual_network.azurerm_virtual_network.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "virtual_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vnet1",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "50436a36-8f6c-4473-a663-43e37aead66d",
            "id": "/subscriptions/193a80b5-b916-4c17-b06d-cfc310d07a2c/resourceGroups/test-rg-1/providers/Microsoft.Network/virtualNetworks/test-vnet-1",
            "location": "eastus",
            "name": "test-vnet-1",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "test-rg-1"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.resource_group"
          ]
        }
      ]
    }
  ]
}